--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -12,6 +12,8 @@
     "ws": "~0.7.1"
   },
   "devDependencies": {
-    "bower": "^1.3.12"
+    "bower": "^1.3.12",
+    "gulp": "^3.9.0",
+    "gulp-typescript": "^2.8.2"
   }
 }
