--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-typescript": "^2.8.2"
   }
 }
