--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-typescript": "^2.8.2"
+    "gulp-typescript": "^2.8.2",
+    "typescript": "^1.6.0-beta"
   }
 }
