--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -8,11 +8,37 @@
   "dependencies": {
     "express": "~4.12.2",
     "kurento-client": "5.1.0",
+    "kurento-utils": "^6.1.0",
     "minimist": "^1.1.0",
-    "ws": "~0.7.1"
+    "uuid": "^2.0.1",
+    "ws": "~0.7.1",
+    "bower": "~1.4.1",
+    "browserify": "^10.2.4",
+    "browserify-optional": "^1.0.0",
+    "coveralls": "~2.11.2",
+    "fs-extra": "^0.19.0",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "~3.8.0",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-githooks": "^0.3.1",
+    "grunt-jsbeautifier": "^0.2.10",
+    "grunt-jscoverage": "^0.1.3",
+    "grunt-jsdoc": "^0.6.7",
+    "grunt-npm2bower-sync": "^0.9.1",
+    "grunt-shell": "^1.1.2",
+    "minifyify": "~7.0.1",
+    "node-static": "^0.7.6",
+    "qunit-assert-canvas": "^1.0.6",
+    "qunit-reporter-junit": "KurentoForks/qunit-reporter-junit",
+    "qunit-reporter-lcov": "^1.0.2",
+    "qunitjs": "^1.18.0",
+    "selenium-webdriver": "2.46.1",
+    "xml2js": "^0.4.9"
   },
   "devDependencies": {
-    "bower": "^1.3.12",
+    "bower": "^1.4.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-sourcemaps": "^1.5.2",
