--- a/aquamed-kurento-rtsp2webrtc/package.json
+++ b/aquamed-kurento-rtsp2webrtc/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-typescript": "^2.8.2"
   }
 }
