--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ kurento-rtsp2many/server.js
 
 # aquamed-kurento-rtsp2webrtc
 aquamed-kurento-rtsp2webrtc/script.js
+aquamed-kurento-rtsp2webrtc/distr/KurentoRtspStreamingManager.js
