--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -6,7 +6,7 @@
     "postinstall": "cd static && bower install"
   },
   "dependencies": {
-    "express": "~4.12.2",
+    "express": "^4.12.4",
     "kurento-client": "5.1.0",
     "kurento-utils": "5.1.0",
     "minimist": "^1.1.0",
