--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -11,6 +11,7 @@
     "kurento-utils": "5.1.0",
     "minimist": "^1.1.0",
     "uuid": "^2.0.1",
+    "winston": "^1.0.2",
     "ws": "~0.7.1"
   },
   "devDependencies": {
