--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -17,7 +17,9 @@
   },
   "devDependencies": {
     "bower": "^1.4.1",
+    "browserify": "^11.2.0",
     "gulp": "^3.9.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-typescript": "^2.8.2",
