[KurentoHub] settings for VS Code

--- a/kurento-rtsp2many/.vscode/tasks.json
+++ b/kurento-rtsp2many/.vscode/tasks.json
@@ -5,6 +5,7 @@
     "args": [
         "--no-color"
     ],
+    "problemMatcher": "$tsc",
     "tasks": [
         {
             "taskName": "default",
