--- a/kurento-rtsp2many/.vscode/settings.json
+++ b/kurento-rtsp2many/.vscode/settings.json
@@ -1,3 +1,23 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+	"files.exclude": {
+		"**/.git": true,
+		"**/.DS_Store": true,
+		
+		//	Exclude modules
+		"node_modules": true,
+		"web/bower_components": true,
+		
+		//	Exculde .js and .js.map
+		"server/*.js": true,
+		"server/*.js.map": true,
+		"web/js/*.js": true,
+		"web/js/*.js.map": true,
+		
+		//	Stuff
+		"bin": true,
+		"obj": true,
+		"*.njsproj": true,
+		".ntvs_analysis.dat": true
+	}
 }
