[KurentoHub] build watch gulp task

--- a/kurento-rtsp2many/.vscode/tasks.json
+++ b/kurento-rtsp2many/.vscode/tasks.json
@@ -9,7 +9,8 @@
     "tasks": [
         {
             "taskName": "default",
-            "isBuildCommand": true
+            "isBuildCommand": true,
+            "isWatching": true
         }
     ]
 }
