--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -23,6 +23,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-typescript": "^2.8.2",
+    "gulp-watch": "^4.3.5",
     "typescript": "^1.6.0-beta"
   }
 }
