--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -13,7 +13,8 @@
     "minimist": "^1.1.0",
     "uuid": "^2.0.1",
     "winston": "^1.0.2",
-    "ws": "~0.7.1"
+    "ws": "~0.7.1",
+    "xpath": "0.0.9"
   },
   "devDependencies": {
     "bower": "^1.4.1",
