--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -14,7 +14,7 @@
     "uuid": "^2.0.1",
     "winston": "^1.0.2",
     "ws": "~0.7.1",
-    "xpath": "0.0.9"
+    "xml2js": "^0.4.13"
   },
   "devDependencies": {
     "bower": "^1.4.1",
