[KurentoHub] deleted .js and .js map files and fixed sourcemap paths

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ kurento-rtsp2many/server/**/*.js
 kurento-rtsp2many/server/**/*.js.map
 kurento-rtsp2many/web/js/**/*.js
 kurento-rtsp2many/web/js/**/*.js.map
+kurento-rtsp2many/web/index.js
 
 # aquamed-kurento-rtsp2webrtc
 aquamed-kurento-rtsp2webrtc/script.js
