--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.9.0",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
+    "gulp-install": "^0.6.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-typescript": "^2.8.2",
     "gulp-watch": "^4.3.5",
