[KurentoHub] problem matcher for VS Code build task

--- a/kurento-rtsp2many/.vscode/tasks.json
+++ b/kurento-rtsp2many/.vscode/tasks.json
@@ -5,12 +5,12 @@
     "args": [
         "--no-color"
     ],
-    "problemMatcher": "$tsc",
     "tasks": [
         {
             "taskName": "default",
             "isBuildCommand": true,
-            "isWatching": true
+            "isWatching": true,
+            "problemMatcher": "$gulp-tsc"
         }
     ]
 }
