[KurentoHub] experiments with gulp

--- a/kurento-rtsp2many/.vscode/tasks.json
+++ b/kurento-rtsp2many/.vscode/tasks.json
@@ -9,6 +9,7 @@
         {
             "taskName": "default",
             "isBuildCommand": true,
+            "showOutput": "always",
             "isWatching": true,
             "problemMatcher": "$gulp-tsc"
         }
