--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -24,10 +24,12 @@
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
     "gulp-install": "^0.6.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-typescript": "^2.8.2",
     "gulp-watch": "^4.3.5",
     "merge2": "^0.3.6",
+    "rename": "^1.0.3",
     "typescript": "^1.6.0-beta"
   }
 }
