--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -14,7 +14,8 @@
     "uuid": "^2.0.1",
     "winston": "^1.0.2",
     "ws": "~0.7.1",
-    "xml2js": "^0.4.13"
+    "xml2js": "^0.4.13",
+    "mongoose": "~4.1.12"
   },
   "devDependencies": {
     "better-console": "^0.2.4",
