--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "autobahn": "^0.9.6",
+    "body-parser": "^1.14.1",
     "express": "^4.12.4",
     "kurento-client": "5.1.0",
     "kurento-utils": "5.1.0",
