[KurentoHub] new AppConfig.ts logic: write settings to file if it does not exist. read from file if it does.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ logs/
 kurento-rtsp2many/server.js
 kurento-rtsp2many/server/**/*.js
 kurento-rtsp2many/server/**/*.js.map
+kurento-rtsp2many/server/KurentoHub.config.json
 kurento-rtsp2many/web/js/**/*.js
 kurento-rtsp2many/web/js/**/*.js.map
 kurento-rtsp2many/web/index.js
