--- a/kurento-rtsp2many/.vscode/settings.json
+++ b/kurento-rtsp2many/.vscode/settings.json
@@ -15,6 +15,8 @@
 		"tests/**/*.js.map": true,
 		"web/js/**/*.js": true,
 		"web/js/**/*.js.map": true,
+		"spec/**/*.js": true,
+		"spec/**/*.js.map": true,
 		
 		//	Stuff
 		"bin": true,
