--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -15,7 +15,8 @@
     "winston": "^1.0.2",
     "ws": "~0.7.1",
     "xml2js": "^0.4.13",
-    "mongoose": "~4.1.12"
+    "mongoose": "~4.1.12",
+    "when": "~3.7.3"
   },
   "devDependencies": {
     "better-console": "^0.2.4",
