--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -26,6 +26,7 @@
     "gulp": "^3.9.0",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
+    "gulp-clean-dest": "~0.1.0",
     "gulp-install": "^0.6.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
