[KurentoMonitor]: add state-machine

--- a/kurento-rtsp2many/package.json
+++ b/kurento-rtsp2many/package.json
@@ -29,8 +29,10 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-typescript": "^2.8.2",
     "gulp-watch": "^4.3.5",
+    "javascript-state-machine": "^2.3.5",
     "merge2": "^0.3.6",
     "rename": "^1.0.3",
+    "tsd": "^0.6.5",
     "typescript": "^1.6.0-beta"
   }
 }
